implement progress bar in cloning functions